fix image align

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,8 +68,6 @@ ul#navigation li:hover > a {
 /* Drop-Down Navigation */
 ul#navigation li:hover > ul
 {
-/*these 2 styles are very important, 
-being the ones which make the drop-down to appear on hover */
 	visibility:visible;
 	opacity:1;
 }
@@ -78,8 +76,6 @@ ul#navigation ul, ul#navigation ul li ul {
 	list-style: none;
     margin: 0;
     padding: 0;    
-/*the next 2 styles are very important, 
-being the ones which make the drop-down to stay hidden */
     visibility:hidden;
     opacity:0;
     position: absolute;
@@ -124,7 +120,12 @@ ul#navigation ul li a {
 	width:150px;
 }
 /* end of navbar */
-
+/*fix image align*/
+img {
+    position: absolute;
+    top: 0; bottom:0; left: 0; right:0;
+    margin: auto;
+}
 h1 {text-transform: uppercase;
 font-size: 21px;}
 h2 {text-transform: uppercase;
